--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Happy Birthday</string>
+    <string name="live_your_life">Live Your Life</string>
+    <string name="by_clint">By Clint</string>
 </resources>
